Configurando o servidor embutido do PHP no script dev. composer run dev

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
             "email": "gillgonzales@ifsul.edu.br"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "scripts":{
+        "dev": "php -S localhost:8090 -t src"
+    }
 }
